<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Champ Bars</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="button_bars">Bar Search</string>
    <string name="button_view_friends_bars">Friend\'s Bars</string>
    <string name="button_check_in">Check In</string>
    <string name="title_activity_display_bars">Bars</string>
    <string name="title_activity_bar_search">Bar Search</string>
    <string name="text_enter_search_radius">Enter Search Radius:</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="button_commit_to_later">Commit</string>
    <string name="app_id">330246980431543</string>
    <string name="title_activity_commit">CommitActivity</string>
    <string name="clys">Cly\'s</string>
    <string name="firehaus">Firehaus</string>
    <string name="joes">Joe\'s</string>
    <string name="kams">Kam\'s</string>
    <string name="legends">Legend\'s</string>
    <string name="murphys">Murphy\'s</string>
    <string name="redLion">Red Lion</string>
    <string name="whiteHo">White Horse</string>
    <string name="title_activity_check_in">CheckInActivity</string>
    <string name="title_activity_bar_clicked">BarInfo</string>
    <string name="title_activity_gcmintent_service">GCMIntentService</string>
    <string name="title_activity_android_list_client">AndroidListClient</string>

    <!-- TIM ADDED -->
    
    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Successfully posted \'%1$s\'.\nPost ID: %2$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_champ_place">Pick a Champaign Place</string>
    <string name="exception">Exception: %1$s</string>
    <string name="champBars">CHAMP BARS</string>
    <string name="buttonCheckedIn">Friends Checked In</string>
    <string name="buttonCommitted">Friends Committed</string>
    

    
</resources>