   <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <Button
             android:id="@+id/cibClys"
		     android:layout_height="60dp"
		     android:layout_width="match_parent"
		     android:text="@string/clys" />
            <Button
             android:id="@+id/cibFirehaus"
		     android:layout_height="60dp"
		     android:layout_width="match_parent"
		     android:text="@string/firehaus" />
            <Button
             android:id="@+id/cibJoes"
		     android:layout_height="60dp"
		     android:layout_width="match_parent"
		     android:text="@string/joes" />
            <Button
             android:id="@+id/cibKams"
		     android:layout_height="60dp"
		     android:layout_width="match_parent"
		     android:text="@string/kams" />
            <Button
             android:id="@+id/cibLegends"
		     android:layout_height="60dp"
		     android:layout_width="match_parent"
		     android:text="@string/legends" /> 
            <Button
             android:id="@+id/cibMurphys"
		     android:layout_height="60dp"
		     android:layout_width="match_parent"
		     android:text="@string/murphys" />
            <Button
             android:id="@+id/cibRedLion"
		     android:layout_height="60dp"
		     android:layout_width="match_parent"
		     android:text="@string/redLion" />
            <Button
             android:id="@+id/cibWhiteHo"
		     android:layout_height="60dp"
		     android:layout_width="match_parent"
		     android:text="@string/whiteHo" />         
            
        </LinearLayout>
    </ScrollView>