<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2010-present Facebook.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:facebook="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#FFF"
              tools:context=".MapActivity"
        >
    <LinearLayout android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:background="#000"
                  android:id="@+id/main_ui_container"
                  >
        <com.facebook.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                facebook:confirm_logout="true"
                facebook:fetch_user_info="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:visibility="gone"
                />
        <LinearLayout
                android:layout_width="150dp"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:weightSum="15"
                >
            <com.facebook.widget.ProfilePictureView
                    android:id="@+id/profilePicture"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    facebook:preset_size="normal"
                    android:layout_weight="5"/>

            <Button
            		android:id="@+id/barsButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_bars" 
                    android:layout_weight="2"/>
            
            <Button
            		android:id="@+id/checkinButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_check_in"
                    android:layout_weight="2" />
            
            <Button
            		android:id="@+id/commitButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/button_commit_to_later" 
                    android:layout_weight="2"/>
            <Button
                    android:id="@+id/viewFriendsButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="View Friends"
                    android:layout_weight="2"
                    />
            <Button
                    android:id="@+id/pickPlaceButton"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Pick Place"
                    android:layout_weight="2"
                    />
            <com.facebook.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                facebook:confirm_logout="true"
                facebook:fetch_user_info="true"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"/>

</LinearLayout>
